# Serval

./: MSCO_environment.yml  finalRequirements.txt  launchGs.py  launchSat.py  pyproject.toml
MSCO_distModel/: __init__.py  launchGroundstation.py  launchSatellite.py  schedule_Satsat_Compute.py
MSCO_distModel/initialize/: initialize_simulator.py
Sat_Simulator/: __init__.py  const.py  edgeCompute.py  main.py  simulator.yml
Sat_Simulator/src/: dataCenter.py  iotDevice.py  log.py  routing.py  satellite.py  simulator.py  station.py  topology.py  transmission.py  utils.py
filters/config/: model_wrappers.py
filters/experiments/: generate_boxes_on_planet.py  inject_filter_result_into_image.py
filters/preprocessing/: combine_filter_array_result.py  gather_forest_historical_data.py  generate_cloud_training_data.py  generate_filter_results.py  generate_forest_result.py  generate_weather_info.py
orin_config/: gs_config.yaml  orinConfig.py  rank0_config.yaml
